@@ -128,18 +128,33 @@ const struct fuse_operations s3backer_fuse_ops = {
 
 /* Configuration and underlying s3backer_store */
 static struct fuse_ops_conf *config;
+static struct fuse_ops_private *the_priv;
 
 /****************************************************************************
  *                      PUBLIC FUNCTION DEFINITIONS                         *
  ****************************************************************************/
 
 const struct fuse_operations *
-fuse_ops_create(struct fuse_ops_conf *config0)
+fuse_ops_create(struct fuse_ops_conf *config0, struct s3backer_store *s3b)
 {
-    if (config != NULL) {
-        (*config0->log)(LOG_ERR, "s3backer_get_fuse_ops(): duplicate invocation");
+    /* Sanity check */
+    assert(config0 != null);
+    assert(s3b != null);
+
+    /* Prevent duplicate invocation */
+    if (config != NULL || the_priv != NULL) {
+        (*config0->log)(LOG_ERR, "fuse_ops_create(): duplicate invocation");
         return NULL;
     }
+
+    /* Create private structure */
+    if ((the_priv = calloc(1, sizeof(*the_priv))) == NULL) {
+        (*config->log)(LOG_ERR, "fuse_ops_create(): %s", strerror(errno));
+        return NULL;
+    }
+    the_priv->s3b = s3b;
+
+    /* Now we're ready */
     config = config0;
     return &s3backer_fuse_ops;
 }
@@ -152,28 +167,16 @@ static void *
 fuse_op_init(struct fuse_conn_info *conn)
 {
     struct s3b_config *const s3bconf = config->s3bconf;
-    struct fuse_ops_private *priv;
+    struct fuse_ops_private *const priv = the_priv;
 
-    /* Create private structure */
-    if ((priv = calloc(1, sizeof(*priv))) == NULL) {
-        (*config->log)(LOG_ERR, "fuse_op_init(): %s", strerror(errno));
-        exit(1);
-    }
+    assert(priv != NULL);
+    assert(priv->s3b != NULL);
     priv->block_bits = ffs(config->block_size) - 1;
     priv->start_time = time(NULL);
     priv->file_atime = priv->start_time;
     priv->file_mtime = priv->start_time;
     priv->stats_atime = priv->start_time;
     priv->file_size = config->num_blocks * config->block_size;
-
-    /* Create backing store */
-    if ((priv->s3b = s3backer_create_store(s3bconf)) == NULL) {
-        (*config->log)(LOG_ERR, "fuse_op_init(): can't create s3backer_store: %s", strerror(errno));
-        free(priv);
-        return NULL;
-    }
-
-    /* Done */
     (*config->log)(LOG_INFO, "mounting %s", s3bconf->mount);
     return priv;
 }
