@@ -36,6 +36,7 @@
 
 /* Forward decl's */
 struct s3b_config;
+struct s3backer_store;
 
 /* Function types */
 typedef void printer_t(void *prarg, const char *fmt, ...) __attribute__ ((__format__ (__printf__, 2, 3)));
@@ -58,5 +59,5 @@ struct fuse_ops_conf {
 };
 
 /* fuse_ops.c */
-const struct fuse_operations *fuse_ops_create(struct fuse_ops_conf *config);
+const struct fuse_operations *fuse_ops_create(struct fuse_ops_conf *config, struct s3backer_store *s3b);
 
